# op

./: .clang-format  CMakeLists.txt  CMakeSettings.json
libop/: CMakeLists.txt  libop.cpp  libop.h
libop/algorithm/: AStar.hpp
libop/background/: opBackground.cpp  opBackground.h
libop/background/Hook/: DisplayHook.cpp  DisplayHook.h  HookExport.cpp  HookExport.h  InputHook.cpp  InputHook.h  d3dx12.h  opDx12Hook.cpp  opDx12Hook.h  opMessage.h
libop/background/display/: IDisplay.cpp  IDisplay.h  frameInfo.h  opDXGI.cpp  opDXGI.h  opDxGL.cpp  opDxGL.h  opGDI.cpp  opGDI.h  opWGC.cpp  opWGC.h
libop/background/keypad/: Bkkeypad.cpp  Bkkeypad.h  winkeypad.cpp  winkeypad.h
libop/background/mouse/: opMouseDx.cpp  opMouseDx.h  opMouseWin.cpp  opMouseWin.h
libop/core/: Cmder.h  Pipe.cpp  Pipe.h  globalVar.cpp  globalVar.h  helpfunc.cpp  helpfunc.h  opEnv.cpp  opEnv.h  optype.h
libop/imageProc/: ImageLoc.cpp  ImageLoc.h  ImageProc.cpp  ImageProc.h  OcrWrapper.cpp  OcrWrapper.h  imageView.hpp  tess_ocr.cpp  tess_ocr.h
libop/imageProc/compute/: ThreadPool.cpp  ThreadPool.h
libop/include/: Dict.h  Image.hpp  bitfunc.h  color.h  promutex.h  sharedmem.h
libop/winapi/: Injecter.cpp  Injecter.h  MemoryEx.cpp  MemoryEx.h  WinApi.cpp  WinApi.h  query_api.cpp  query_api.h
